--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   },
   "dependencies": {
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "0.52.0",
+    "react-native-arkit": "^0.8.0-beta.0",
+    "react-native-elements": "^0.19.0",
+    "react-native-router-flux": "^4.0.0-beta.27",
+    "react-native-safe-area-view": "^0.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.0.6",
