--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "react-native-arkit": "^0.8.0-beta.0",
     "react-native-elements": "^0.19.0",
     "react-native-router-flux": "^4.0.0-beta.27",
-    "react-native-safe-area-view": "^0.2.0"
+    "react-native-safe-area-view": "^0.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-observable": "^0.17.0",
+    "rxjs": "^5.5.6"
   },
   "devDependencies": {
     "babel-jest": "22.0.6",
