--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^4.8.2",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-arkit": "^0.8.0-beta.0",
@@ -14,6 +15,7 @@
     "react-native-router-flux": "^4.0.0-beta.27",
     "react-native-safe-area-view": "^0.2.0",
     "react-native-scrollable-tab-view": "^0.8.0",
+    "react-native-vector-icons": "^4.5.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-observable": "^0.17.0",
